--- a/theme.css
+++ b/theme.css
@@ -1,4 +1,6 @@
-.button {
+/** Common **/
+
+.button, .menu {
   padding: 0.5em 1.5em;
   border-style: solid;
   border-radius: 0.25em;
@@ -9,12 +11,43 @@
   outline: none;
 }
 
-button:hover {
+
+/** Menu / MenuItem **/
+
+.menu {
+  display: block;
+  text-align: left;
+  top: auto;
+  margin-top: 0.2em;
+  padding: 0px;
+}
+
+.menu-item {
+  padding: 0.5em 1.5em;
+  cursor: pointer;
+}
+
+.menu-item:first-child {
+  margin-top: 0.5em;
+}
+
+.menu-item:last-child {
+  margin-bottom: 0.5em;
+}
+
+.menu-item > a {
+  color: inherit;
+}
+
+
+/** Hoverable **/
+
+button:hover, .menu-item:hover {
   background-color: #d1ccd1;
 }
 
-button.disabled:hover,
-button.disabled {
+.menu-item.disabled:hover, .menu-item.disabled,
+button.disabled:hover, button.disabled {
   border-color: grey;
   background-color: white;
   color: grey;
