--- a/toolkit/theme.css
+++ b/toolkit/theme.css
@@ -1,6 +1,6 @@
 /** Common **/
 
-.button, .menu {
+.button, .menu, .field {
   padding: 0.5em 1.5em;
   border-style: solid;
   border-radius: 0.25em;
@@ -27,6 +27,10 @@
 .menu-item {
   padding: 0.5em 1.5em;
   cursor: pointer;
+}
+
+.menu-item a {
+  text-decoration: none;
 }
 
 .menu-item.active,
